# telebot-constructor

./: .gitignore  LICENSE  Procfile  README.md  build_frontend.sh  build_package.py  build_package.sh  config.py  flowbite-theme-extend.js  global_redis.py  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.txt  run_existing_webhook_app.py  run_polling.py  secret_store.py  svelte.config.js  tailwind-theme.js  tailwind.config.cjs
.github/workflows/: pr_test.yml  pypi_publish.yaml
data/: schema.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/locales/: en.json  ru.json
frontend/public/: bot_auth_login.html  group_chat_auth_login.html  index.html  landing.html  telegram_auth_login.html
frontend/src/: App.svelte  BaseConstructor.svelte  CreateBotButton.svelte  CreateBotModal.svelte  GlobalStateProvider.svelte  ThemeProvider.svelte  app.css  app.pcss  botConfigsStore.ts  constants.ts  globalStateStores.ts  i18n.ts  main.ts  routeUtils.ts  types.ts  utils.ts
landing/: svelte.config.js  tailwind.config.cjs  tsconfig.json
landing/src/: app.pcss
scripts/: aws_media_store_test.py  build_landing.py  build_package.py  check_locales.py  find_unlocalized.py  lint.sh  migrate.py  poetry_install_minimal.py  translate_prefilled_messages.py
scripts/models/: jsonschema2ts.mjs  pydantic2jsonschema.py
telebot_constructor/: app.py  app_models.py  auth.py  backend.py  bot_config.py  build_time_config.py  constants.py  construct.py  cors.py  debug.py  group_chat_discovery.py  pydantic_utils.py  runners.py  static.py  store.py  telegram_files_downloader.py
telebot_constructor/auth/: auth.py  chat_bot_auth.py  telegram_auth.py
telebot_constructor/client/: bot.py  client.py
tests/: test_bot_runners.py  test_form_user_block_utils.py  test_pydantic_utils.py  test_storage.py  test_utils.py  utils.py
(+208 files in other folders)
